--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -242,13 +242,13 @@ h1 {
 /* 404.html */
 
 .not-found {
-  position: absolute;
-  left: 0;
-  right: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 80%;
+  /* position: absolute; */
+  /* left: 0; */
+  /* right: 0; */
+  /* display: flex; */
+  /* align-items: center; */
+  /* justify-content: center; */
+  /* height: 80%; */
   /* font-size: 40px; */
   font-size: calc(var(--base-font-size) * 2.5);
   font-weight: 300;
