--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -252,6 +252,7 @@ h1 {
   /* font-size: 40px; */
   font-size: calc(var(--base-font-size) * 2.5);
   font-weight: 300;
+  margin: 0 10px;
 }
 
 .not-found a {
