--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,10 +1,8 @@
 {{- define "main" }}
 <!-- <div class="not-found entry-content"> -->
 <div class="not-found">
-  <p>
-    404 Not Found<br>
-    ページが見つかりません.<br>
-    <a href="{{ .Site.Home.RelPermalink }}">ホームに戻る</a>
-  </p>
+  <h2>404 - ページが見つかりません</h2>
+  <p>お探しのページは存在しないか、移動しました。</p>
+  <a href="{{ .Site.Home.RelPermalink }}">ホームに戻る</a>
 </div>
 {{- end }}{{/* end main */ -}}
