--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -251,8 +251,8 @@ h1 {
   /* height: 80%; */
   /* font-size: 40px; */
   /* font-size: calc(var(--base-font-size) * 2.5); */
-  /* font-weight: 300; */
   /* margin: 0 10px; */
+  font-weight: 300;
   display: block;
   margin-top: 10%;
 }
