--- a/layouts/shortcodes/k100/q-list.html
+++ b/layouts/shortcodes/k100/q-list.html
@@ -3,6 +3,8 @@
   "advanced" .Site.Params.k100.site.edition.a
 }}  */}}
 {{ $root := .Get "root" | default ".." }}
+{{ $sortKey := .Get "sortkey" | default "id" }}
+{{ $order := .Get "order" | default "asc" }}
 {{ $data := .Site.Data.k100.questions }}
 {{ if not $data }}
   <div class="error-message">データが存在しません。</div>
@@ -18,7 +20,10 @@
       <div class="q-list-table">
         {{ $question := index $data $category }}
         {{ if $question }}
-          {{ range $question }}
+          {{/*  {{ range $question }}  */}}
+          {{/*  {{ $sortedQuestions := sort $question "id" "asc" "natural" }}  */}}
+          {{ $sortedQuestions := sort $question $sortKey $order}}
+          {{ range $sortedQuestions }}
             {{ $url := path.Join $root $category (lower .id) }}
             <div class="q-item">
               <div class="q-header">
