--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -536,12 +536,12 @@ blockquote.alert {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 .q-item .q-header .q-difficulty .q-difficulty-rating-container {
   display: flex;
   align-items: center; /* 上下中央揃え */
-  width: 95px;
+  width: 90px;
 }
 
 /* No. のスタイル */
@@ -572,19 +572,26 @@ blockquote.alert {
 
 /* 問題文のスタイル */
 .q-item .q-content {
-  padding-top: 5px;
+  padding-top: 10px;
   padding-bottom: 15px;
+  padding-left: 5px;
+  padding-right: 5px;
   /* font-size: 0.9em; */
   font-size: calc(var(--base-font-size) * 0.9);
   line-height: 1.7;
+  color: var(--primary);
   /* background-color: var(--theme); */
-  background-color: #FEFEFF;
+  background-color: #FAFAFA;
 }
 .dark .q-item .q-content {
-  background-color: #202020;
+  color: var(--primary);
+  /* background-color: #202020; */
+  /* background-color: #252532 */
+  background-color: #282834;
 }
 
 .q-item .q-header {
+  padding: 0 5px;
   background-color: var(--code-bg);
 }
 
