--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -104,14 +104,29 @@ code {
   /* font-family: 'Monaco', 'Roboto Mono', 'Consolas', 'Courier New', monospace; */
   /* font-family: 'Noto Sans Mono', 'Roboto Mono', 'Monaco', 'Consolas', 'Courier New', monospace; */
   font-family: 'Roboto Mono', 'Monaco', 'Consolas', 'Courier New', monospace;
-  font-size: calc(var(--base-font-size) * 0.88) !important;
+  font-size: calc(var(--base-font-size) * 1.0);
   font-weight: normal;
   /* font-size: 12pt !important; */
 }
 
+/* inline code */
+.post-content code {
+  margin: auto 4px;
+  /* padding: 4px 6px; */
+  padding: 2px 6px;
+  font-size: 1.0em;
+  line-height: 1.8;
+  /* background: var(--code-bg); */
+  background: rgb(245, 245, 245);
+  border-radius: 2px;
+}
+.dark .post-content code {
+  background: var(--code-bg);
+}
+
 /* chroma (Hugo の構文ハイライト) */
 .chroma {
-  background-color: unset;
+  font-size: calc(var(--base-font-size) * 0.85);
   /* background-color: unset !important; */
   /* margin: 0px 0 26px; */
   /* margin: 0px 0 26px !important; */
@@ -181,7 +196,6 @@ box-shadow: 0 -1px 0 var(--primary) inset;
   line-height: 1.8;
 }
 
-/* post-entry.css */
 /* 見出しの line-height (default: 1.2-1.3) */
 h1,
 h2,
@@ -194,6 +208,8 @@ h6 {
   line-height: 1.5;
   font-weight: bold; /* 見出しは太字 */
 }
+
+/* post-entry.css */
 
 .entry-header h2 {
   /* default: 1.3 */
@@ -214,14 +230,41 @@ h6 {
   /* padding-bottom: 0px !important; */
 }
 
-/* post-single.css */
+/* ???.css */
 
 h1 {
   /* font-size: 35px !important; */
-  font-size: calc(var(--base-font-size) * 1.75) !important;
+  /* font-size: calc(var(--base-font-size) * 1.75) !important; */
   /* 上部, 左右, 下部 */
   /* margin: 0px auto 0px !important; */
   /* padding-bottom: 0px; */
+}
+
+/* listページのh2 */
+.entry-header h2.entry-hint-parent {
+  font-size: 24px;
+}
+
+/* main.css */
+
+/* Tags, Archive など */
+.page-header h1 {
+  /* font-size: 40px; */
+  font-size: calc(var(--base-font-size) * 1.9) !important;
+}
+
+/* post-single.css */
+
+/* 
+.post-content h1 {
+  margin: 40px auto 32px;
+  font-size: 40px;
+} */
+
+/* singleページのh1 */
+h1.post-title.entry-hint-parent {
+  margin: 12px auto 8px;
+  font-size: calc(var(--base-font-size) * 1.75);
 }
 
 /* post contents の H2 に border を引く */
